--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,21 @@
 version: "3.8"
 
 services:
-  db:
+  mariadb:
+    container_name: leek_db
+    hostname: leek_db
     image: mariadb:10.10.2-jammy
-    hostname: db
     restart: always
     env_file:
       - .env
 
   bot:
+    container_name: leek_bot
+    hostname: leek_bot
     image: leekbot
     build: .
     environment:
-      SQL_HOST: db
+      SQL_HOST: leek_db
       SQL_USER: ${MARIADB_USER}
       SQL_PASSWORD: ${MARIADB_PASSWORD}
       SQL_DB: leek
