--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: leek_db
     hostname: leek_db
     image: mariadb:10.10.2-jammy
+    volumes:
+      - ./data:/var/lib/mysql:rw
     restart: always
     env_file:
       - .env
